add_library(data_structures
        bitset/bitset.c
        unordered_array_set/unordered_array_set.c
        ordered_array_set/ordered_array_set.c
        vector/vector.c
        vector/vector_void/vector_void.c
        vector/vector_void/vector_void.h
        matrix/matrix.h
        matrix/matrix.c
)
